<resources>
    <string name="app_name">Karate Lessons</string>
    <!-- STARTUP PAGE -->
    <string name="startup_page">Startup Page</string>
    <string name="startup_page_info">Check credentials and start preloading data</string>
    <string name="testString_hint">String from fragment_startup</string>
    <!-- LOGIN PAGE -->
    <string name="logo_description">Logo Ippan Karate System, One person in fighting stance one person kicking.</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">login</string>
    <string name="or">or</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="register_question">Don\'t have an account?</string>
    <string name="register_here">Register here.</string>
    <!-- REGISTER PAGE -->
    <string name="bow_description">Silhouette of person bowing.</string>
    <string name="register_title">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">register</string>
    <!-- PROFILE PAGE -->
    <string name="username">Username</string>
    <string name="username_hint">your username</string>
    <string name="email_hint">your email address</string>
    <string name="email">Email</string>
    <string name="club">Karate Club</string>
    <string name="club_hint">your club</string>
    <string name="grade">Grade</string>
    <string name="grade_hint">your grade</string>
    <string name="progress">Progress</string>
    <string name="progress_hint">1/31</string>
    <string name="leave_karate_club">Leave Karate Club</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="username_icon_description">A silhouette icon</string>
    <string name="mail_icon_description">A mail envelope icon</string>
    <string name="club_icon_description">Multiple silhouettes as an icon.</string>
    <string name="grade_icon_description">A star icon</string>
    <string name="progress_icon_description">A vertical progression lin with dots used as an icon for progress</string>
    <string name="logout">logout</string>
    <!-- REGISTER PAGE -->
    <!-- LessonCard -->
    <string name="card_gear">Gear :</string>
    <string name="card_type">Type :</string>
    <string name="card_location">Location :</string>
    <string name="banner_kumite">Image of two people sparring. One person throwing a quick jab to the head of the opponent.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_text">Don\'t worry, fill out your email below and we\'ll help you out right away!</string>
    <string name="lessons">Lessons</string>
    <string name="events">Events</string>
    <string name="kata">Kata</string>
    <string name="profile">Profile</string>
    <string name="participants">Participants:</string>
    <string name="participate">Participate</string>
    <string name="check_in_participants">Participants</string>
    <string name="check_in_hint">Enter the lesson code or scan the QR-code presented by the teacher</string>
    <string name="check_in_input_hint">Lesson Code</string>
    <string name="qr_code_scanner_content_description">Icon used to identify QR-Code scanner</string>
    <string name="check_in_menu_test_check_in">Test Check-In</string>
</resources>